resources/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kavita
  namespace: kavita
spec:
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: linuxserver/kavita:0.9.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
      volumes:
        - name: books
          nfs:
            path: /volume1/media/books
            server: 192.168.1.21
        - name: config
          persistentVolumeClaim:
            claimName: kavita
