resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kavita
